deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lukin-me
  namespace: apps
spec:
  selector:
    app: lukin-me
  ports:
    - name: http
      port: 80
      targetPort: 80
